
////////////////////////////////////////////////////////////////

Mac code updated some. It now compiles about half way. Still need to
work on it...

Changed strings.c to the official bsd code that returns the correct
values for strlcat and strlcpy.

////////////////////////////////////////////////////////////////

If X_HAVE_UTF8_STRING is not defined, then the X implementation lacks 
Xutf8LookupString() and is probably not XFree86. XmbLookupString(3X11) 
is used in its place and returns a locale-dependent multibyte-encoded 
buffer which is trancoded to UTF-8 via iconv(3). If iconv_open() does 
not find a conversion description for multibyte to UTF-8, the 
non-XInput method is used.

////////////////////////////////////////////////////////////////

Changed SharedImage::guess to fltk::guess_image. This is due to 
fact that windows dll linker needs all exported functions to be in library.
Cause SharedImage was declared as FL_API, linker assumes that all SharedImage 
functions are implemented in libfltk. So I moved SharedImage::guess out of the class
and made it FL_IMAGES_API.

////////////////////////////////////////////////////////////////

fl_color_win32.cxx loads SetDCPenColor and SetDCBrushColor functions dynamically.
Uses alternative (old) method, if those functions cannot be loaded (older windows)
from gdi32.dll

////////////////////////////////////////////////////////////////
* Added Window::Maximize
  so far for X11 and Win32
  TODO: MAC OS X version, and testing
	And added example of maximize() as part of teset/fullscreen.cxx

* Probably fixed bug: gifImage.cxx:105: error: â€˜U32â€™ was not declared
  by adding a work around to configure.in
  in crosscompilation with mingw (linux 64 bit to windows)
  And documented crosscompilation (TODO - finish it)

* Added Window::system_layout() so that it is possible to override the
  default Window::layout() method yet still do the operating system
  stuff needed to resize the window. Only tested on X11.


